# proj_dir

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.txt  uncrustify.cfg  vcpkg.json
cmake/: options.cmake  pre_project.cmake
docs/: CMakeLists.txt
include/: CMakeLists.txt
include/dirs/: linux.hpp  windows.hpp
include/proj_dir/: folders.hpp  linux.hpp  windows.hpp
src/: CMakeLists.txt  folders.cpp  linux.cpp  windows.cpp
tests/: CMakeLists.txt  main.test.cpp
